test/types/scalar/bradc/bitNegateBool.good
bitNegateBool.chpl:4: error: ~ is not suported on operands of boolean type
