test/types/scalar/bradc/bitNegateBool.chpl
var t: bool = true;
var f: bool = false;

writeln("~true = ", ~t);
writeln("~false = ", ~f);
